--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -3,14 +3,7 @@
 
 :root {
   font-family: SM-E, Helvetica, Arial, sans-serif;
-  font-size: 16px;
-  line-height: 24px;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
   background-color: #242424;
-
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
@@ -29,6 +22,7 @@ body {
   height: 200px;
   width: 200px;
   border-radius: 50%;
+  background-color: transparent;
   border: solid 20px red;
 }
 
