--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -3,7 +3,6 @@
 
 :root {
   font-family: SM-E, Helvetica, Arial, sans-serif;
-  background-color: #242424;
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
@@ -13,21 +12,32 @@
 
 body {
   margin: 0;
-  display: flex;
   min-width: 320px;
   min-height: 100vh;
+  background-color: #242424;
 }
 
+#menu-container {
+  display: flex;
+}
 #menu {
   height: 200px;
   width: 200px;
   border-radius: 50%;
-  background-color: transparent;
   border: solid 20px red;
+  background: transparent;
 }
-
-#menu.selected {
-  @include buttonbackground;
+#menu-background {
+  visibility: visible;
+  z-index: -1;
+  background-repeat: no-repeat;
+  background-size: 60%;
+  background-position: center;
+  position: absolute;
+  background-color: red;
+  //background-image: url(../assets/close.svg);
+  height: 200px;
+  width: 200px;
 }
 
 h1 {
@@ -35,11 +45,4 @@ h1 {
   font-size: 3.2em;
   line-height: 1.1;
   text-align: start;
-}
-
-#app {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
 }
