--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -21,21 +21,20 @@ body {
   display: flex;
 }
 #menu {
-  height: 200px;
-  width: 200px;
+  height: 50px;
+  width: 50px;
   border-radius: 50%;
-  border: solid 20px red;
+  border: solid 5px red;
   background: transparent;
 }
 #menu-background {
-  visibility: visible;
+  visibility: hidden;
   z-index: -1;
   background-repeat: no-repeat;
-  background-size: 60%;
   background-position: center;
+  background-size: 5%;
   position: absolute;
-  background-color: red;
-  //background-image: url(../assets/close.svg);
+  background-image: url(../assets/close.svg);
   height: 200px;
   width: 200px;
 }
