--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -15,28 +15,36 @@ body {
   min-width: 320px;
   min-height: 100vh;
   background-color: #242424;
+  display: flex;
+  justify-content: right;
 }
 
 #menu-container {
   display: flex;
+  padding-right: 1em;
+  width: 50px;
+  height: 50px;
 }
+
 #menu {
   height: 50px;
   width: 50px;
-  border-radius: 50%;
-  border: solid 5px red;
-  background: transparent;
+  border: none;
+  background-image: url(../assets/menu.svg);
+  background-color: transparent;
 }
+
 #menu-background {
   visibility: hidden;
   z-index: -1;
   background-repeat: no-repeat;
   background-position: center;
-  background-size: 5%;
+  background-size: 100%;
+  //Scale in Gsap Menu
   position: absolute;
   background-image: url(../assets/close.svg);
-  height: 200px;
-  width: 200px;
+  width: 50px;
+  height: 50px;
 }
 
 h1 {
