--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -12,23 +12,26 @@
 
 body {
   margin: 0;
-  min-width: 320px;
-  min-height: 100vh;
+  height: 100vh;
+  width: 100vw;
   background-color: #242424;
   display: flex;
-  justify-content: right;
 }
 
 #menu-container {
+  position: fixed;
+  right: 0;
+  top: 0;
   display: flex;
-  padding-right: 1em;
-  width: 50px;
-  height: 50px;
+  width: 100px;
+  height: 100px;
 }
 
 #menu {
-  height: 50px;
-  width: 50px;
+  height: 100px;
+  width: 100px;
+  background-repeat: no-repeat;
+  background-position: center;
   border: none;
   background-image: url(../assets/menu.svg);
   background-color: transparent;
