--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -35,6 +35,7 @@ body {
   border: none;
   background-image: url(../assets/menu.svg);
   background-color: transparent;
+  visibility: hidden;
 }
 
 #menu-background {
@@ -48,6 +49,13 @@ body {
   background-image: url(../assets/close.svg);
   width: 50px;
   height: 50px;
+}
+
+#menu-path {
+  width: 300px;
+  height: 100px;
+  background-repeat: no-repeat;
+  background-image: url(../assets/menu_path.svg);
 }
 
 h1 {
