--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -15,7 +15,7 @@ body {
   height: 100vh;
   width: 100vw;
   background-color: #242424;
-  display: flex;
+  display: block;
 }
 
 #menu-container {
@@ -35,7 +35,6 @@ body {
   border: none;
   background-image: url(../assets/menu.svg);
   background-color: transparent;
-  visibility: hidden;
 }
 
 #menu-background {
@@ -63,4 +62,21 @@ h1 {
   font-size: 3.2em;
   line-height: 1.1;
   text-align: start;
+}
+
+section {
+  height: 100vh;
+  width: 100vw;
+}
+#test1 {
+  height: 200px;
+  width: 200px;
+  background-color: red;
+}
+
+#test2 {
+  height: 200px;
+  width: 200px;
+
+  background-color: yellow;
 }
